# knn-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: config1_wdbc_predacc_9_minmax_eucl_25
data/: dataset_description.txt  iris.data  penguins.data  words.data
example_datasets/: dataset_description.txt
knn_cli/: cli.py  data_loader.py  data_utils.py  distance_metric.py  knn.py  normalization.py  statistics.py  train_test_splitting.py  visualization.py
test/: test_distance_metric.py
tests/: test_data_loader.py  test_distance_metric.py  test_knn_classification.py  test_knn_cli.py  test_normalization_methods.py  test_statistics.py  test_tool_error_handling.py  test_traintest_split.py
